src/parse/snapshots/script_lang__parse__test__r#if__if_else.snap
---
source: src/parse/test.rs
assertion_line: 173
expression: ast

---
IfStmt {
    span: Span {
        start: 0,
        end: 0,
    },
    cond: Literal(
        Boolean(
            true,
            Span {
                start: 0,
                end: 0,
            },
        ),
    ),
    body: Block {
        stmts: [],
        span: Span {
            start: 0,
            end: 0,
        },
    },
    else_part: Some(
        Else(
            Block {
                stmts: [],
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
            Span {
                start: 0,
                end: 0,
            },
        ),
    ),
}
