src/parse/snapshots/script_lang__parse__test__r#if__if_else_if.snap
---
source: src/parse/test.rs
assertion_line: 182
expression: ast

---
IfStmt {
    span: Span {
        start: 0,
        end: 0,
    },
    cond: Literal(
        Boolean(
            true,
            Span {
                start: 0,
                end: 0,
            },
        ),
    ),
    body: Block {
        stmts: [],
        span: Span {
            start: 0,
            end: 0,
        },
    },
    else_part: Some(
        ElseIf(
            IfStmt {
                span: Span {
                    start: 0,
                    end: 0,
                },
                cond: Literal(
                    Boolean(
                        true,
                        Span {
                            start: 0,
                            end: 0,
                        },
                    ),
                ),
                body: Block {
                    stmts: [],
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                },
                else_part: None,
            },
            Span {
                start: 0,
                end: 0,
            },
        ),
    ),
}
